--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="content">
             <h3>Hi, i am Dawit Nigus</h3>
             <span>front-end developer</span>
-            
+            <p style="color: rgb(255, 202, 55);"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi voluptatem doloremque ipsum fugit natus laudantium quos? Voluptates quas, deleniti, at iusto quibusdam a, commodi repellat praesentium delectus autem eligendi molestias.</p>
             <a href="#" class="btn"> about me <i class="fas fa-user"></i> </a>
         </div>
     
