--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul id="ul">
            
          
-            <li style="margin-left: 1vh; "><a href="#main">HOME</a></li>
+            <li style="margin-left: 1vh; "><a href="#home">HOME</a></li>
             <li style="margin-left: 1vh; "><a href="#about">AboutMe</a></li>
             <li style="margin-left: 1vh; "><a href="#education">Eduaction</a></li>
             <li style="margin-left: 1vh;"><a href="#service">Service</a></li>
